--- a/index.html
+++ b/index.html
@@ -3,35 +3,96 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | Copeville</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <title>Copeville</title>
+    <link rel="shortcut icon" href="TemplateData/mainlogo.jpg">
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+        font-family: Arial, sans-serif;
+        background-color: black;
+      }
+
+      #unity-container {
+        width: 100vw;
+        height: 100vh;
+        background: url('Build/none.png') center center / cover no-repeat;
+        position: fixed;
+        top: 0;
+        left: 0;
+      }
+
+      #unity-canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+        background-color: transparent;
+      }
+
+      #custom-spinner {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 60px;
+        height: 60px;
+        border: 6px solid rgba(255, 255, 255, 0.2);
+        border-top-color: #00ffff;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        transform: translate(-50%, -50%);
+        z-index: 10;
+      }
+
+      #progress-text {
+        position: absolute;
+        top: calc(50% + 50px);
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 20px;
+        color: white;
+        z-index: 11;
+      }
+
+      @keyframes spin {
+        0% { transform: translate(-50%, -50%) rotate(0deg); }
+        100% { transform: translate(-50%, -50%) rotate(360deg); }
+      }
+
+      #unity-warning {
+        z-index: 20;
+        color: white;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+      }
+
+      #unity-footer {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
+    <div id="unity-container">
+      <canvas id="unity-canvas" tabindex="-1"></canvas>
+      <div id="custom-spinner"></div>
+      <div id="progress-text">0%</div>
+      <div id="unity-warning"></div>
       <div id="unity-footer">
-        <div id="unity-logo-title-footer"></div>
-        <div id="unity-fullscreen-button"></div>
+        <div id="unity-fullscreen-button" style="cursor:pointer;">🔳 Fullscreen</div>
         <div id="unity-build-title">Copeville</div>
       </div>
     </div>
+
     <script>
       var canvas = document.querySelector("#unity-canvas");
+      var spinner = document.querySelector("#custom-spinner");
+      var progressText = document.querySelector("#progress-text");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
       function unityShowBanner(msg, type) {
         var warningBanner = document.querySelector("#unity-warning");
         function updateBannerVisibility() {
@@ -43,7 +104,7 @@
         if (type == 'error') div.style = 'background: red; padding: 10px;';
         else {
           if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
+          setTimeout(() => {
             warningBanner.removeChild(div);
             updateBannerVisibility();
           }, 5000);
@@ -52,76 +113,41 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl files.loader.js";
+      var loaderUrl = buildUrl + "/New_Webgl.loader.js";
       var config = {
         arguments: [],
+        dataUrl: "https://danny.b-cdn.net/Build/webgl4.data",
         dataUrl: buildUrl + "/webgl files.data.gz",
         frameworkUrl: buildUrl + "/webgl files.framework.js.gz",
         codeUrl: buildUrl + "/webgl files.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "WeepingPlebs Development Team",
+        // frameworkUrl: buildUrl + "/New_Webgl.framework.js",
+        // codeUrl: buildUrl + "/New_Webgl.wasm",
+        // streamingAssetsUrl: "StreamingAssets",
+        companyName: "Copeville Development Team",
         productName: "Copeville",
         productVersion: "1.9.3",
         showBanner: unityShowBanner,
       };
 
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      // If you would like all file writes inside Unity Application.persistentDataPath
-      // directory to automatically persist so that the contents are remembered when
-      // the user revisits the site the next time, uncomment the following line:
-      // config.autoSyncPersistentDataPath = true;
-      // This autosyncing is currently not the default behavior to avoid regressing
-      // existing user projects that might rely on the earlier manual
-      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
-      // expected to change.
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        document.querySelector("#unity-container").className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
-      }
-
-      document.querySelector("#unity-loading-bar").style.display = "block";
-
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-          document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                document.querySelector("#unity-loading-bar").style.display = "none";
-                document.querySelector("#unity-fullscreen-button").onclick = () => {
-                  unityInstance.SetFullscreen(1);
-                };
-
-              }).catch((message) => {
-                alert(message);
-              });
-            };
+          spinner.style.display = "block";
+          progressText.textContent = Math.round(progress * 100) + "%";
+        }).then((unityInstance) => {
+          spinner.style.display = "none";
+          progressText.style.display = "none";
+          document.querySelector("#unity-fullscreen-button").onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }).catch((message) => {
+          alert(message);
+        });
+      };
 
       document.body.appendChild(script);
-
     </script>
   </body>
 </html>
